--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -568,7 +568,7 @@ ViewUsersLabel_username=Username:
 ViewUsersTitle_username=Username
 ViewUsersLabel_userpassword=Userpassword:
 ViewUsersTitle_userpassword=Userpassword
-ListUsersTitle=List
+ListUsersTitle=List Users
 ListUsersEmpty=(No Users Items Found)
 ListUsersDestroyLink=Destroy
 ListUsersEditLink=Edit
