Added export functionality, unique username, search and sort. Done. Just need to copy paste for the rest of the entities.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -67,7 +67,7 @@ ViewAvailabilityLabel_supplierid=Supplierid:
 ViewAvailabilityTitle_supplierid=Supplierid
 ViewAvailabilityLabel_materialid=Materialid:
 ViewAvailabilityTitle_materialid=Materialid
-ListAvailabilityTitle=List
+ListAvailabilityTitle=List Availibility
 ListAvailabilityEmpty=(No Availability Items Found)
 ListAvailabilityDestroyLink=Destroy
 ListAvailabilityEditLink=Edit
@@ -136,7 +136,7 @@ ViewClientLabel_mobile=Mobile:
 ViewClientTitle_mobile=Mobile
 ViewClientLabel_zip=Zip:
 ViewClientTitle_zip=Zip
-ListClientTitle=List
+ListClientTitle=List Clients
 ListClientEmpty=(No Client Items Found)
 ListClientDestroyLink=Destroy
 ListClientEditLink=Edit
@@ -402,7 +402,7 @@ ViewSetupLabel_setupid=Setupid:
 ViewSetupTitle_setupid=Setupid
 ViewSetupLabel_communication=Communication:
 ViewSetupTitle_communication=Communication
-ListSetupTitle=List
+ListSetupTitle=Setup
 ListSetupEmpty=(No Setup Items Found)
 ListSetupDestroyLink=Destroy
 ListSetupEditLink=Edit
