Added export functionality, unique username, search and sort. Done. Just need to copy paste for the rest of the entities.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -423,10 +423,10 @@ CreateSupplierRequiredMessage_supplierid=The Supplierid field is required.
 CreateSupplierTitle_supplierid=Supplierid
 CreateSupplierLabel_address=Address:
 CreateSupplierTitle_address=Address
-CreateSupplierLabel_bedrijfsnaam=Bedrijfsnaam:
-CreateSupplierTitle_bedrijfsnaam=Bedrijfsnaam
-CreateSupplierLabel_contactpersoon=Contactpersoon:
-CreateSupplierTitle_contactpersoon=Contactpersoon
+CreateSupplierLabel_bedrijfsnaam=Company Name:
+CreateSupplierTitle_bedrijfsnaam=Company Name
+CreateSupplierLabel_contactpersoon=Contact person:
+CreateSupplierTitle_contactpersoon=Contact person
 CreateSupplierLabel_phone=Phone:
 CreateSupplierTitle_phone=Phone
 CreateSupplierLabel_zip=Zip:
@@ -441,10 +441,10 @@ EditSupplierRequiredMessage_supplierid=The Supplierid field is required.
 EditSupplierTitle_supplierid=Supplierid
 EditSupplierLabel_address=Address:
 EditSupplierTitle_address=Address
-EditSupplierLabel_bedrijfsnaam=Bedrijfsnaam:
-EditSupplierTitle_bedrijfsnaam=Bedrijfsnaam
-EditSupplierLabel_contactpersoon=Contactpersoon:
-EditSupplierTitle_contactpersoon=Contactpersoon
+EditSupplierLabel_bedrijfsnaam=Company Name:
+EditSupplierTitle_bedrijfsnaam=Company Name
+EditSupplierLabel_contactpersoon=Contact person:
+EditSupplierTitle_contactpersoon=Contact person
 EditSupplierLabel_phone=Phone:
 EditSupplierTitle_phone=Phone
 EditSupplierLabel_zip=Zip:
@@ -459,15 +459,15 @@ ViewSupplierLabel_supplierid=Supplierid:
 ViewSupplierTitle_supplierid=Supplierid
 ViewSupplierLabel_address=Address:
 ViewSupplierTitle_address=Address
-ViewSupplierLabel_bedrijfsnaam=Bedrijfsnaam:
-ViewSupplierTitle_bedrijfsnaam=Bedrijfsnaam
-ViewSupplierLabel_contactpersoon=Contactpersoon:
-ViewSupplierTitle_contactpersoon=Contactpersoon
+ViewSupplierLabel_bedrijfsnaam=Company Name:
+ViewSupplierTitle_bedrijfsnaam=Company Name
+ViewSupplierLabel_contactpersoon=Contact person:
+ViewSupplierTitle_contactpersoon=Contact person
 ViewSupplierLabel_phone=Phone:
 ViewSupplierTitle_phone=Phone
 ViewSupplierLabel_zip=Zip:
 ViewSupplierTitle_zip=Zip
-ListSupplierTitle=List
+ListSupplierTitle=List Suppliers
 ListSupplierEmpty=(No Supplier Items Found)
 ListSupplierDestroyLink=Destroy
 ListSupplierEditLink=Edit
@@ -476,8 +476,8 @@ ListSupplierCreateLink=Create New Supplier
 ListSupplierIndexLink=Index
 ListSupplierTitle_supplierid=Supplierid
 ListSupplierTitle_address=Address
-ListSupplierTitle_bedrijfsnaam=Bedrijfsnaam
-ListSupplierTitle_contactpersoon=Contactpersoon
+ListSupplierTitle_bedrijfsnaam=Company Name
+ListSupplierTitle_contactpersoon=Contact person
 ListSupplierTitle_phone=Phone
 ListSupplierTitle_zip=Zip
 SupplierMaterialCreated=SupplierMaterial was successfully created.
@@ -520,7 +520,7 @@ ViewSupplierMaterialLabel_supplier=Supplier:
 ViewSupplierMaterialTitle_supplier=Supplier
 ViewSupplierMaterialLabel_material=Material:
 ViewSupplierMaterialTitle_material=Material
-ListSupplierMaterialTitle=List
+ListSupplierMaterialTitle=List SupplierMaterial
 ListSupplierMaterialEmpty=(No SupplierMaterial Items Found)
 ListSupplierMaterialDestroyLink=Destroy
 ListSupplierMaterialEditLink=Edit
