Linked Client and reservation xhtmls. Added more sample data, minor bug fixes, etc.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -311,15 +311,15 @@ CreateReservationIndexLink=Index
 CreateReservationLabel_reservationid=Reservationid:
 CreateReservationRequiredMessage_reservationid=The Reservationid field is required.
 CreateReservationTitle_reservationid=Reservationid
-CreateReservationLabel_durationperminute=Durationperminute:
-CreateReservationTitle_durationperminute=Durationperminute
-CreateReservationLabel_startdate=Startdate:
-CreateReservationTitle_startdate=Startdate
-CreateReservationLabel_starttime=Starttime:
-CreateReservationTitle_starttime=Starttime
+CreateReservationLabel_durationperminute=Duration/minute:
+CreateReservationTitle_durationperminute=Duration/minute
+CreateReservationLabel_startdate=Start date:
+CreateReservationTitle_startdate=Start date
+CreateReservationLabel_starttime=Start time:
+CreateReservationTitle_starttime=Start time
 CreateReservationLabel_total=Total:
 CreateReservationTitle_total=Total
-CreateReservationLabel_clientid=Clientid:
+CreateReservationLabel_clientid=Client:
 CreateReservationTitle_clientid=Clientid
 EditReservationTitle=Edit Reservation
 EditReservationSaveLink=Save
@@ -329,16 +329,16 @@ EditReservationIndexLink=Index
 EditReservationLabel_reservationid=Reservationid:
 EditReservationRequiredMessage_reservationid=The Reservationid field is required.
 EditReservationTitle_reservationid=Reservationid
-EditReservationLabel_durationperminute=Durationperminute:
-EditReservationTitle_durationperminute=Durationperminute
-EditReservationLabel_startdate=Startdate:
-EditReservationTitle_startdate=Startdate
-EditReservationLabel_starttime=Starttime:
-EditReservationTitle_starttime=Starttime
+EditReservationLabel_durationperminute=Duration/minute:
+EditReservationTitle_durationperminute=Duration/minute
+EditReservationLabel_startdate=Start date:
+EditReservationTitle_startdate=Start date
+EditReservationLabel_starttime=Start time:
+EditReservationTitle_starttime=Start time
 EditReservationLabel_total=Total:
 EditReservationTitle_total=Total
-EditReservationLabel_clientid=Clientid:
-EditReservationTitle_clientid=Clientid
+EditReservationLabel_clientid=Client:
+EditReservationTitle_clientid=Client
 ViewReservationTitle=View
 ViewReservationDestroyLink=Destroy
 ViewReservationEditLink=Edit
@@ -347,16 +347,16 @@ ViewReservationShowAllLink=Show All Reservation Items
 ViewReservationIndexLink=Index
 ViewReservationLabel_reservationid=Reservationid:
 ViewReservationTitle_reservationid=Reservationid
-ViewReservationLabel_durationperminute=Durationperminute:
-ViewReservationTitle_durationperminute=Durationperminute
-ViewReservationLabel_startdate=Startdate:
-ViewReservationTitle_startdate=Startdate
-ViewReservationLabel_starttime=Starttime:
-ViewReservationTitle_starttime=Starttime
+ViewReservationLabel_durationperminute=Duration/minute:
+ViewReservationTitle_durationperminute=Duration/minute
+ViewReservationLabel_startdate=Start date:
+ViewReservationTitle_startdate=Start date
+ViewReservationLabel_starttime=Start time:
+ViewReservationTitle_starttime=Start time
 ViewReservationLabel_total=Total:
 ViewReservationTitle_total=Total
-ViewReservationLabel_clientid=Clientid:
-ViewReservationTitle_clientid=Clientid
+ViewReservationLabel_clientid=Client:
+ViewReservationTitle_clientid=Client
 ListReservationTitle=List
 ListReservationEmpty=(No Reservation Items Found)
 ListReservationDestroyLink=Destroy
