Linked Client and reservation xhtmls. Added more sample data, minor bug fixes, etc.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -25,8 +25,8 @@ CreateAvailabilityLabel_durationperminute=Durationperminute:
 CreateAvailabilityTitle_durationperminute=Durationperminute
 CreateAvailabilityLabel_startdate=Startdate:
 CreateAvailabilityTitle_startdate=Startdate
-CreateAvailabilityLabel_starttime=Starttime:
-CreateAvailabilityTitle_starttime=Starttime
+CreateAvailabilityLabel_starttime=Start time:
+CreateAvailabilityTitle_starttime=Start time
 CreateAvailabilityLabel_supplierid=Supplierid:
 CreateAvailabilityTitle_supplierid=Supplierid
 CreateAvailabilityLabel_materialid=Materialid:
@@ -43,8 +43,8 @@ EditAvailabilityLabel_durationperminute=Durationperminute:
 EditAvailabilityTitle_durationperminute=Durationperminute
 EditAvailabilityLabel_startdate=Startdate:
 EditAvailabilityTitle_startdate=Startdate
-EditAvailabilityLabel_starttime=Starttime:
-EditAvailabilityTitle_starttime=Starttime
+EditAvailabilityLabel_starttime=Start time:
+EditAvailabilityTitle_starttime=Start time
 EditAvailabilityLabel_supplierid=Supplierid:
 EditAvailabilityTitle_supplierid=Supplierid
 EditAvailabilityLabel_materialid=Materialid:
@@ -61,8 +61,8 @@ ViewAvailabilityLabel_durationperminute=Durationperminute:
 ViewAvailabilityTitle_durationperminute=Durationperminute
 ViewAvailabilityLabel_startdate=Startdate:
 ViewAvailabilityTitle_startdate=Startdate
-ViewAvailabilityLabel_starttime=Starttime:
-ViewAvailabilityTitle_starttime=Starttime
+ViewAvailabilityLabel_starttime=Start time:
+ViewAvailabilityTitle_starttime=Start time
 ViewAvailabilityLabel_supplierid=Supplierid:
 ViewAvailabilityTitle_supplierid=Supplierid
 ViewAvailabilityLabel_materialid=Materialid:
@@ -77,7 +77,7 @@ ListAvailabilityIndexLink=Index
 ListAvailabilityTitle_availabilityid=Availabilityid
 ListAvailabilityTitle_durationperminute=Durationperminute
 ListAvailabilityTitle_startdate=Startdate
-ListAvailabilityTitle_starttime=Starttime
+ListAvailabilityTitle_starttime=Start time
 ListAvailabilityTitle_supplierid=Supplierid
 ListAvailabilityTitle_materialid=Materialid
 ClientCreated=Client was successfully created.
@@ -163,8 +163,8 @@ CreateEquipmentrentLabel_durationperminute=Durationperminute:
 CreateEquipmentrentTitle_durationperminute=Durationperminute
 CreateEquipmentrentLabel_startdate=Startdate:
 CreateEquipmentrentTitle_startdate=Startdate
-CreateEquipmentrentLabel_starttime=Starttime:
-CreateEquipmentrentTitle_starttime=Starttime
+CreateEquipmentrentLabel_starttime=Start time:
+CreateEquipmentrentTitle_starttime=Start time
 CreateEquipmentrentLabel_state=State:
 CreateEquipmentrentTitle_state=State
 CreateEquipmentrentLabel_total=Total:
@@ -185,8 +185,8 @@ EditEquipmentrentLabel_durationperminute=Durationperminute:
 EditEquipmentrentTitle_durationperminute=Durationperminute
 EditEquipmentrentLabel_startdate=Startdate:
 EditEquipmentrentTitle_startdate=Startdate
-EditEquipmentrentLabel_starttime=Starttime:
-EditEquipmentrentTitle_starttime=Starttime
+EditEquipmentrentLabel_starttime=Start time:
+EditEquipmentrentTitle_starttime=Start time
 EditEquipmentrentLabel_state=State:
 EditEquipmentrentTitle_state=State
 EditEquipmentrentLabel_total=Total:
@@ -207,8 +207,8 @@ ViewEquipmentrentLabel_durationperminute=Durationperminute:
 ViewEquipmentrentTitle_durationperminute=Durationperminute
 ViewEquipmentrentLabel_startdate=Startdate:
 ViewEquipmentrentTitle_startdate=Startdate
-ViewEquipmentrentLabel_starttime=Starttime:
-ViewEquipmentrentTitle_starttime=Starttime
+ViewEquipmentrentLabel_starttime=Start time:
+ViewEquipmentrentTitle_starttime=Start time
 ViewEquipmentrentLabel_state=State:
 ViewEquipmentrentTitle_state=State
 ViewEquipmentrentLabel_total=Total:
@@ -217,7 +217,7 @@ ViewEquipmentrentLabel_reservationid=Reservationid:
 ViewEquipmentrentTitle_reservationid=Reservationid
 ViewEquipmentrentLabel_materialid=Materialid:
 ViewEquipmentrentTitle_materialid=Materialid
-ListEquipmentrentTitle=List
+ListEquipmentrentTitle=List Equipmentrent
 ListEquipmentrentEmpty=(No Equipmentrent Items Found)
 ListEquipmentrentDestroyLink=Destroy
 ListEquipmentrentEditLink=Edit
@@ -226,8 +226,8 @@ ListEquipmentrentCreateLink=Create New Equipmentrent
 ListEquipmentrentIndexLink=Index
 ListEquipmentrentTitle_equipmentrentid=Equipmentrentid
 ListEquipmentrentTitle_durationperminute=Durationperminute
-ListEquipmentrentTitle_startdate=Startdate
-ListEquipmentrentTitle_starttime=Starttime
+ListEquipmentrentTitle_startdate=Start date
+ListEquipmentrentTitle_starttime=Start time
 ListEquipmentrentTitle_state=State
 ListEquipmentrentTitle_total=Total
 ListEquipmentrentTitle_reservationid=Reservationid
@@ -288,7 +288,7 @@ ViewMaterialLabel_materialtype=Materialtype:
 ViewMaterialTitle_materialtype=Materialtype
 ViewMaterialLabel_rentprice=Rentprice:
 ViewMaterialTitle_rentprice=Rentprice
-ListMaterialTitle=List
+ListMaterialTitle=List Material
 ListMaterialEmpty=(No Material Items Found)
 ListMaterialDestroyLink=Destroy
 ListMaterialEditLink=Edit
@@ -357,7 +357,7 @@ ViewReservationLabel_total=Total:
 ViewReservationTitle_total=Total
 ViewReservationLabel_clientid=Client:
 ViewReservationTitle_clientid=Client
-ListReservationTitle=List
+ListReservationTitle=List Reservation
 ListReservationEmpty=(No Reservation Items Found)
 ListReservationDestroyLink=Destroy
 ListReservationEditLink=Edit
@@ -365,9 +365,9 @@ ListReservationViewLink=View
 ListReservationCreateLink=Create New Reservation
 ListReservationIndexLink=Index
 ListReservationTitle_reservationid=Reservationid
-ListReservationTitle_durationperminute=Durationperminute
-ListReservationTitle_startdate=Startdate
-ListReservationTitle_starttime=Starttime
+ListReservationTitle_durationperminute=Duration/minute
+ListReservationTitle_startdate=Start date
+ListReservationTitle_starttime=Start time
 ListReservationTitle_total=Total
 ListReservationTitle_clientid=Clientid
 SetupCreated=Setup was successfully created.
@@ -628,7 +628,7 @@ ViewWarehouseLabel_volume=Volume:
 ViewWarehouseTitle_volume=Volume
 ViewWarehouseLabel_zip=Zip:
 ViewWarehouseTitle_zip=Zip
-ListWarehouseTitle=List
+ListWarehouseTitle=List Warehouses
 ListWarehouseEmpty=(No Warehouse Items Found)
 ListWarehouseDestroyLink=Destroy
 ListWarehouseEditLink=Edit
