Minor bug fixes, etc.

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -252,6 +252,8 @@ CreateMaterialLabel_materialtype=Materialtype:
 CreateMaterialTitle_materialtype=Materialtype
 CreateMaterialLabel_rentprice=Rentprice:
 CreateMaterialTitle_rentprice=Rentprice
+CreateMaterialLabel_picture=Picture:
+CreateMaterialTitle_picture=Picture
 EditMaterialTitle=Edit Material
 EditMaterialSaveLink=Save
 EditMaterialViewLink=View
