Added export functionality to arrangement and monitor pages Fixed issue with creating multiple arrangement types (arrangement type ID is now also auto-generated)

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -700,7 +700,7 @@ ViewArrangementLabel_arrangementdurationperminute=Duration in minutes:
 ViewArrangementTitle_arrangementdurationperminute=Duration in minutes
 ViewArrangementLabel_arrangementtype=Type:
 ViewArrangementTitle_arrangementtype=Type
-ListArrangementTitle=List
+ListArrangementTitle=List Arrangements
 ListArrangementEmpty=(No Arrangements)
 ListArrangementDestroyLink=Destroy
 ListArrangementEditLink=Edit
@@ -752,7 +752,7 @@ ViewArrangementtypeLabel_arrangementtype=Type:
 ViewArrangementtypeTitle_arrangementtype=Type
 ViewArrangementtypeLabel_arrangement=Arrangement ID:
 ViewArrangementtypeTitle_arrangement=Arrangement ID
-ListArrangementtypeTitle=List
+ListArrangementtypeTitle=List Arrangement Types
 ListArrangementtypeEmpty=(No Arrangement types)
 ListArrangementtypeDestroyLink=Destroy
 ListArrangementtypeEditLink=Edit
@@ -812,7 +812,7 @@ ViewMonitorLabel_monitoremail=E-mail:
 ViewMonitorTitle_monitoremail=E-mail
 ViewMonitorLabel_monitorphone=Phone number:
 ViewMonitorTitle_monitorphone=Phone number
-ListMonitorTitle=List
+ListMonitorTitle=List Monitors
 ListMonitorEmpty=(No Monitors)
 ListMonitorDestroyLink=Destroy
 ListMonitorEditLink=Edit
@@ -881,7 +881,7 @@ ViewMonitoringLabel_monitor=Assigned monitor ID:
 ViewMonitoringTitle_monitor=Assigned monitor ID
 ViewMonitoringLabel_arrangement=Arrangement:
 ViewMonitoringTitle_arrangement=Arrangement
-ListMonitoringTitle=List
+ListMonitoringTitle=List Monitoring Sessions
 ListMonitoringEmpty=(No Monitoring sessions)
 ListMonitoringDestroyLink=Destroy
 ListMonitoringEditLink=Edit
