Final changes to dropdown and table displays of names/IDs

--- a/src/main/resources/Bundle.properties
+++ b/src/main/resources/Bundle.properties
@@ -839,12 +839,12 @@ CreateMonitoringTitle_monitoringstarttime=Start time
 CreateMonitoringLabel_monitoringdurationperminute=Duration in minutes:
 CreateMonitoringRequiredMessage_monitoringdurationperminute=The Duration in minutes field is required.
 CreateMonitoringTitle_monitoringdurationperminute=Duration in minutes
-CreateMonitoringLabel_monitor=Assigned monitor ID:
-CreateMonitoringRequiredMessage_monitor=The Assigned monitor ID field is required.
-CreateMonitoringTitle_monitor=Assigned monitor ID
-CreateMonitoringLabel_arrangement=Arrangement:
-CreateMonitoringRequiredMessage_arrangement=The Arrangement field is required.
-CreateMonitoringTitle_arrangement=Arrangement
+CreateMonitoringLabel_monitor=Assigned monitor:
+CreateMonitoringRequiredMessage_monitor=The Assigned monitor field is required.
+CreateMonitoringTitle_monitor=Assigned monitor
+CreateMonitoringLabel_arrangement=Arrangement ID:
+CreateMonitoringRequiredMessage_arrangement=The Arrangement ID field is required.
+CreateMonitoringTitle_arrangement=Arrangement ID
 EditMonitoringTitle=Edit Monitoring
 EditMonitoringSaveLink=Save
 EditMonitoringViewLink=View
@@ -859,12 +859,12 @@ EditMonitoringTitle_monitoringstarttime=Start time
 EditMonitoringLabel_monitoringdurationperminute=Duration in minutes:
 EditMonitoringRequiredMessage_monitoringdurationperminute=The Duration in minutes field is required.
 EditMonitoringTitle_monitoringdurationperminute=Duration in minutes
-EditMonitoringLabel_monitor=Assigned monitor ID:
-EditMonitoringRequiredMessage_monitor=The Assigned monitor ID field is required.
-EditMonitoringTitle_monitor=Assigned monitor ID
-EditMonitoringLabel_arrangement=Arrangement:
-EditMonitoringRequiredMessage_arrangement=The Arrangement field is required.
-EditMonitoringTitle_arrangement=Arrangement
+EditMonitoringLabel_monitor=Assigned monitor:
+EditMonitoringRequiredMessage_monitor=The Assigned monitor field is required.
+EditMonitoringTitle_monitor=Assigned monitor
+EditMonitoringLabel_arrangement=Arrangement ID:
+EditMonitoringRequiredMessage_arrangement=The Arrangement ID field is required.
+EditMonitoringTitle_arrangement=Arrangement ID
 ViewMonitoringTitle=View
 ViewMonitoringDestroyLink=Destroy
 ViewMonitoringEditLink=Edit
@@ -877,10 +877,10 @@ ViewMonitoringLabel_monitoringstarttime=Start time:
 ViewMonitoringTitle_monitoringstarttime=Start time
 ViewMonitoringLabel_monitoringdurationperminute=Duration in minutes:
 ViewMonitoringTitle_monitoringdurationperminute=Duration in minutes
-ViewMonitoringLabel_monitor=Assigned monitor ID:
-ViewMonitoringTitle_monitor=Assigned monitor ID
-ViewMonitoringLabel_arrangement=Arrangement:
-ViewMonitoringTitle_arrangement=Arrangement
+ViewMonitoringLabel_monitor=Assigned monitor:
+ViewMonitoringTitle_monitor=Assigned monitor
+ViewMonitoringLabel_arrangement=Arrangement ID:
+ViewMonitoringTitle_arrangement=Arrangement ID
 ListMonitoringTitle=List Monitoring Sessions
 ListMonitoringEmpty=(No Monitoring sessions)
 ListMonitoringDestroyLink=Destroy
@@ -891,5 +891,5 @@ ListMonitoringIndexLink=Index
 ListMonitoringTitle_monitoringstartdate=Start date
 ListMonitoringTitle_monitoringstarttime=Start time
 ListMonitoringTitle_monitoringdurationperminute=Duration in minutes
-ListMonitoringTitle_monitor=Assigned monitor ID
-ListMonitoringTitle_arrangement=Arrangement
+ListMonitoringTitle_monitor=Assigned monitor
+ListMonitoringTitle_arrangement=Arrangement ID
